--- a/client/scss/components/_bio.scss
+++ b/client/scss/components/_bio.scss
@@ -1,7 +1,7 @@
 .bio {
   &__main {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     flex-wrap: wrap;
     width: 95%;
     margin-bottom: 8rem;
@@ -9,24 +9,26 @@
 
   &__container {
     display: flex;
-    align-items: stretch;
+    // align-items: stretch;
     flex-direction: row;
     align-items: center;
     margin-bottom: 2rem;
     margin-left: 4rem;
     margin-right: 4rem;
 
-    @media only screen and (max-width: $bp-900) {
+
+
+    @media only screen and (max-width: $bp-1200) {
       margin-bottom: 1rem;
       flex-direction: column;
     }
-    // @media only screen and (max-width: $bp-600) {
-    //   flex-direction: column;
-    // }
+    
 
     &-pic {
-      flex-grow: 1;
+      // flex-grow: 1;
+      display: flex;
       padding: 2rem;
+      
     }
   }
 
@@ -60,16 +62,26 @@
 #pic-1,
 #pic-2 {
   border-radius: 5px;
-
   border-radius: $border-radius;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.45);
+  // padding:2rem;
+  
+
 }
 
 #pic-1 {
-  height: 200px;
-  width: auto;
+  height: 350px;
+    width: auto;
+    margin-left: 2rem;
+    width: 0;
+
+
+  
   @media only screen and (max-width: $bp-900) {
-    display: none;
+    // display: none;
+    height: 250px;
+    width: auto;
+    margin-left: 2rem;
   }
   @media only screen and (max-width: $bp-600) {
     height: 150px;
@@ -77,10 +89,11 @@
   }
 }
 #pic-2 {
-  height: 300px;
+  height: 350px;
   width: auto;
 
   @media only screen and (max-width: $bp-900) {
     height: 250px;
+    width: auto;
   }
 }
